[package]
name = "hengilas"
version = "0.1.0"
edition = "2024"

[dependencies]
dirs = "6.0.0"
env_logger = "0.11.10"
log = "0.4"
gio = "0.22"
glib = "0.22"
gtk4 = { version = "0.11", features = ["v4_20"] }
pango = "0.22"
gtk4-layer-shell = "0.8"
gtk4-session-lock = { version = "0.4", features = ["v1_2"] }
nonstick = "0.1.2"
serde = { version = "1.0.228", features = ["derive"] }
tokio = "1.52"
toml = "1.1.2"

[build-dependencies]
glib-build-tools = "0.22"
